# dependency

./: README.md  meson.build
include/: dependency.h  extern.h
src/: dependency.c
